--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@react-router/serve": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "isbot": "^5.1.17",
     "lucide-react": "^0.477.0",
     "luxon": "^3.5.0",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
     "tailwind-merge": "^3.0.2",
