--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.10",
     "isbot": "^5.1.17",
     "lucide-react": "^0.477.0",
     "luxon": "^3.5.0",
