--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-router/node": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
-    "@supabase/supabase-js": "^2.47.5",
+    "@react-router/node": "^7.3.0",
+    "@react-router/serve": "^7.3.0",
+    "@supabase/supabase-js": "^2.49.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.40.0",
-    "framer-motion": "^12.4.10",
-    "isbot": "^5.1.17",
-    "lucide-react": "^0.477.0",
+    "framer-motion": "^12.5.0",
+    "isbot": "^5.1.23",
+    "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
+    "npm-check-updates": "^17.1.15",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.6.2",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0",
+    "react-router": "^7.3.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
@@ -45,17 +46,17 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.2.0",
-    "@tailwindcss/vite": "^4.0.0",
+    "@react-router/dev": "^7.3.0",
+    "@tailwindcss/vite": "^4.0.14",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
+    "@types/node": "^22",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "drizzle-kit": "^0.30.5",
-    "react-router-devtools": "^1.1.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
+    "react-router-devtools": "^1.1.6",
+    "tailwindcss": "^4.0.14",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.2",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
