--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.40.0",
     "framer-motion": "^12.5.0",
+    "hono": "^4.7.4",
     "isbot": "^5.1.23",
     "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
@@ -40,7 +41,9 @@
     "react-day-picker": "^9.6.2",
     "react-dom": "^19.0.0",
     "react-router": "^7.3.0",
+    "react-router-hono-server": "^2.11.0",
     "recharts": "^2.15.1",
+    "remix-hono": "^0.0.18",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "type-fest": "^4.37.0",
