--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
     "npm-check-updates": "^17.1.15",
+    "openai": "^4.91.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.2",
