--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:typegen": "supabase gen types typescript --project-id qqzqcbubmkjvsqzujcny > database.types.ts"
   },
   "dependencies": {
+    "@cloudflare/workers-types": "^4.20250407.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -22,6 +23,8 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-email/components": "^0.0.36",
+    "@react-router/cloudflare": "^7.5.0",
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
     "@supabase/ssr": "^0.6.1",
@@ -45,6 +48,7 @@
     "react-router-hono-server": "^2.11.0",
     "recharts": "^2.15.1",
     "remix-hono": "^0.0.18",
+    "resend": "^4.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "type-fest": "^4.37.0",
