--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-router/serve": "^7.3.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.1",
+    "@tosspayments/tosspayments-sdk": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
